2009-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHashTable.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSConcreteMapTable.m:
	* Headers/Additions/GNUstepBase/GSIMap.h:
	Changes for GC zeroing weak pointers.  Implement enumeration stuff for
	new classes. Add code to support subclassing.

2009-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Implement the
	([countByEnumeratingWithState:objects:count:]) method.

2009-04-18 10:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSURLPrivate.h: Addition of private method to NSURLProtocol 
	category.
	* Source/NSURLConnection.m: Changes to use the new method and to correct
	bug #26107.  Patch by: doug@riverrock.org
	* Source/NSURLProtocol.m: Addition of static method to look up class 
	which can handle the given connection protocol.  
	Patch by: doug@riverrock.org
	
2009-04-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHasTable.h: new OSX 10.5 API
	* Source/NSHashTable.m: New abstract class
	* Source/NSConcreteHashTable.m: concrete implementation
	* Source/NSKeyValueObserving.m: Fix incorrect hash table references.

2009-04-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Change placeholder string initialisation so that,
	in a GC world, it checks to see if the buffer passed to it is
	collectable and forces a copy if it isn't.  This prevents memory leaks
	when a malloc'ed buffer is passed to the initialiser.

2009-04-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h: New private functions.
	* Source/NSObject.m: Add function to swizzle isa pointer safely.
	* Source/NSZone.m: Add function to check for collectable memory.
	* Source/NSData.m: Add finalisation for shared memory and mapped
	files. Add finalized subclasses to deal with memory which must be
	freed when the NSData is collected.

2009-04-11 01:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>
